--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,117 @@
 @import "tailwindcss";
+
+@theme iniline {
+    --font-36days: var(--font-36days);
+    --font-nohemi: var(--font-nohemi);
+}
+
+*::selection {
+  background: #fff;
+  color: #000;
+}
+
+html.lenis,
+html.lenis body {
+  height: auto;
+  scroll-behavior: smooth;
+}
+
+.lenis:not(.lenis-autoToggle).lenis-stopped {
+  overflow: clip;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
+.lenis.lenis-autoToggle {
+  transition-property: overflow;
+  transition-duration: 1ms;
+  transition-behavior: allow-discrete;
+}
+
+.example-2 {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9px;
+}
+
+.example-2 .inner {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  margin: 1.5px;
+}
+
+.example-2::before {
+  content: "";
+  display: block;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(172, 172, 172, 0.75) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  height: 300px;
+  width: 100px;
+  transform: translate(0);
+  position: absolute;
+  animation: rotate 5s linear forwards infinite;
+  z-index: 0;
+  top: 50%;
+  transform-origin: top center;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.scroll-bar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(124, 124, 124, 0.5) transparent;
+}
+
+.scroll-bar:hover {
+  scrollbar-color: rgba(129, 129, 129, 0.5) transparent;
+}
+
+.scroll-bar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scroll-bar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb {
+  background-color: rgba(124, 124, 124, 0.5);
+  border-radius: 4px;
+}
+
+.scroll-bar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(129, 129, 129, 0.5);
+}
+
+/* HTML: <div class="rounded-edge"></div> */
+.rounded-edge {
+  height: 200px;
+  aspect-ratio: 3/2;
+  /* update the 85% to control the curvature
+     you can also update the 50% to control the position
+  */
+  clip-path: ellipse(85% 100% at 50% 0%);
+  background: #CC2A41;
+}
